--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="navigation-right">
         <a class="navbar-brand" href="sepet.html"
-        ><i class="fas fa-shopping-cart"></i> <span id="span"></span
+        ><i class="fas fa-shopping-cart" style="color: #E92F48;"></i> <span id="span"></span
       ></a>
         <a href="kayıtt.html">
           <button class="login-btn" href="">Login</button>
