--- a/sepet.html
+++ b/sepet.html
@@ -14,7 +14,9 @@
   body li{
     list-style-type:none ;
   }
- 
+ body{
+  background-image: url(./images/background-2535510_1280.jpg);
+ }
  </style>
 </head>
 <body>
